--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   cupertino_icons: ^1.0.5
   font_awesome_flutter:
   flutter_svg: ^1.1.0
+  firebase_core: ^2.1.1
+  firebase_auth: ^4.1.1
+  firebase_ui_firestore: ^1.0.4
+  firebase_dynamic_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
