--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   firebase_core: ^2.1.1
   firebase_auth: ^4.1.1
   firebase_ui_firestore: ^1.0.4
-  firebase_dynamic_links: ^0.5.1
+  firebase_database: ^10.0.4
 
 dev_dependencies:
   flutter_test:
