added profile page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   firebase_auth: ^4.1.1
   firebase_ui_firestore: ^1.0.4
   firebase_database: ^10.0.4
+  form_field_validator: ^1.0.1
+  animated_theme_switcher: ^2.0.7
+  line_awesome_flutter: ^2.0.0
+  flutter_screenutil: ^5.6.0
+
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-#    - assets/icons/
+    - assets/icons/
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
