--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,5 +69,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation platform('com.google.firebase:firebase-bom:28.0.0')
+//    implementation platform('com.google.firebase:firebase-bom:28.0.0')
+//    implementation "org.jetbrains.kotlin:kotlin-reflect:1.1.0"
 }
